Première mise en page de la navigation. Des rectification doivent arriver encore. Je précise que la couleur de fond n'est là que pour délimiter les bloc, il ne restera pas.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <meta name="viewport" content="width=devise-width, initial-scale=1">
     <title>Wild Eat 2</title>
     <link rel="stylesheet" href="style.css">
-    <!--Bien placer l'icon dans le répertoire racine au format .ico-->
-    <!-- Remplacer la partie (ICON) par (./) puis sélectionner le fichier-->
-    <link rel="shortcut icon" href="ICON" type="image/x-icon">
+    <link rel="shortcut icon" href="./data-img/Logo-Wild-Eat-2.ico" type="image/x-icon">
 </head>
 
 
@@ -20,7 +18,19 @@
  <!--En tête-->
 
  <header>
+         <div class="logo">
+             <img src="./data-img/Logo-Wild-Eat-2.png" alt="logo du site" class="img-logo">
+             <p>Explorez des plats uniques et authentiques 
+             allant des classiques revisités aux créations contemporaines.</p>
+         </div>
 
+         <nav class="navigation">
+             <ul>
+                      <li><a href="#">Contact</a></li>
+                      <li><a href="#">Collections</a></li>
+                      <li><a href="#">Actualité</a></li>
+             </ul>
+         </nav>
  </header>
 
 
