add burger menu and touch the header CSS

--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
              <ul>
                       <li><a href="#">Contact</a></li>
                       <li><a href="./test.html">Collections</a></li>
-                      <li><a href="#">Actualité</a></li>
+                      <li><a href="#">Actualités</a></li>
              </ul>
+             <img class="close_burger" src="data-img/close.svg" class="close_burger" onclick="closeMenu()">
          </nav>
+         <img class="menu_burger" src="data-img/menu_burger.svg" class="menu_burger" onclick="openMenu()">
+         
+         
  </header>
 
 
@@ -268,6 +272,8 @@
 
  </footer>
 
+
+ <script src="script.js"></script>
 </body>
 
 </html>
