--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
  <header>
          <div class="logo">
-             <img src="./data-img/Logo-Wild-Eat-2.png" alt="logo du site" class="img-logo">
+             <img src="data-img/logo_wild_eat.svg" alt="logo du site" class="img-logo">
              <p>Explorez des plats uniques et authentiques 
              allant des classiques revisités aux créations contemporaines.</p>
          </div>
