--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <nav class="navigation">
         <ul>
           <li><a href="#">Contact</a></li>
-          <li><a href="#">Collections</a></li>
+          <li><a href="#">Qui sommes nous ?</a></li>
           <li><a href="#">Actualités</a></li>
         </ul>
         <img
