Rectification img et trad barre de recherche

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         <div class="photo-plat">
           <img
-            src="./data-img/Pizza-de-l'amour-égaré-icon.jpg"
+            src="./data-img/Pizza-de-l'amour-égaré.jpg"
             alt="pizza de l'amour égaré"
           />
         </div>
@@ -245,7 +245,7 @@
 
         <div class="photo-plat">
           <img
-            src="./data-img/Salade-de-la-joie-perdue-icon.jpg"
+            src="./data-img/Salade-de-la-joie-perdue.jpg"
             alt="Salade de la joie perdue"
           />
         </div>
@@ -309,7 +309,7 @@
 
         <div class="photo-plat">
           <img
-            src="./data-img/Soshi_de_la_chance-icon.jpg"
+            src="./data-img/Soshi_de_la_chance.jpg"
             alt="Soshi de la chance"
           />
         </div>
@@ -372,7 +372,7 @@
 
         <div class="photo-plat">
           <img
-            src="./data-img/Au_Bled_de_l'optimisme-icon.jpg"
+            src="./data-img/Au_Bled_de_l_optimisme.jpg"
             alt="Au Bled de l'optimisme"
           />
         </div>
